style: fixed gap in @media

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 599px) {
   .header {
     display: flex;
     justify-content: flex-start;
